--- a/SqliteOpenHelper/app/build.gradle
+++ b/SqliteOpenHelper/app/build.gradle
@@ -61,5 +61,10 @@ dependencies {
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
+    def lifecycle_version = "2.3.1"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+
 
 }
